--- a/cloud-demo-start/src/main/resources/templates/fragments/footer.html
+++ b/cloud-demo-start/src/main/resources/templates/fragments/footer.html
@@ -7,7 +7,7 @@
 
 <footer class="blog-footer" data-th-fragment="footer">
     <div class="container">
-        <p>Welcome to <a href="https://waylau.com">waylau.com</a></p>
+        <p>Welcome to rskt</a></p>
     </div>
 
    	<!-- Bootstrap core JavaScript
